Bug 1073872 - Fix data encoding if a channel is diverted from a child back to the parent. r=sworkman